[package]
name = "ontime"
version = "0.1.0"
authors = ["korneliuszw <27420848+korneliuszw@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
pretty_env_logger = "0.4.0"
log = "0.4.14"
chrono = "0.4.19"
md5 = "0.7.0"
nix = "0.20.0"
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"
